--- a/cv.tex
+++ b/cv.tex
@@ -139,7 +139,7 @@ Språk, samfunnsfag og økonomi
 % Verv
 \CVSection{Verv}
 \CVItem{2013 - nå, Online, linjeforeningen for informatikk}\\
-\textit{Komitémedlem - Ekskursjonskomiteen}, Ekskursjonskomiteen har ansvaret for å arrangere informatikkstudentene i tredje årstrinn sin årlige ekskursjon. Ekskursjonen er av akademisk grad og går gjerne til et sted av utenlandsk opprinnelse hvor næringsliv og utdanningsinstitusjoner blir besøkt.
+\textit{Komitémedlem - Ekskursjonskomiteen}, Ekskursjonskomiteen har ansvaret for å arrangere informatikkstudentene i tredje årstrinn sin årlige ekskursjon. Ekskursjonen er av akademisk grad og besøker næringsliv og utdanningsinstitusjoner blir besøkt. Ansvarlig for å arrangere fagdagen TechTalks. 
 \SmallSep
 
 \CVItem{2013 - nå, Online, linjeforeningen for informatikk}\\
@@ -195,6 +195,8 @@ Språk, samfunnsfag og økonomi
 \end{multicols}
 \SmallSep 
 
+\CVSection{Annet}
+
 \CVItem{Interesser}
 \begin{multicols}{3}
 \begin{compactitem}[\color{RoyalBlue}$\circ$]
@@ -210,7 +212,7 @@ Språk, samfunnsfag og økonomi
 \Sep 
 
 % References
-\CVSection{Referenaser}
+\CVSection{Referanser}
 Referanser oppgis ved behov
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
