--- a/cv.tex
+++ b/cv.tex
@@ -188,7 +188,9 @@ Språk, samfunnsfag og økonomi
 	\item Latex 
 	\item HTML
 	\item CSS
+    \item JavaScript
 	\item nginx 
+    \item Vim
 	\item MySQL 
 	\item Microsoft Office
 \end{compactitem}
